frontend/test/should_fail/keepOneForEach_iterated_accumulation_entity_equals_entity.grg
test t
{
	iterated it {
	---
		def var i:int;
		def var j:int;
	} \ keepOneForEach<i>Accumulate<i>By<sum>
}
